fixed alignment of the section subscribe

--- a/scss/_section_subscribe.scss
+++ b/scss/_section_subscribe.scss
@@ -34,7 +34,7 @@ div.subscribe {
         .section_subscribe__wrapper {
             display: flex;
             flex-direction: row;
-            align-items: baseline;
+            align-items: center;
             justify-content: space-between;
             div.subscribe {
                 padding-top: 0;
